fixed some styling on smaller displays

--- a/akaflieg-ui/src/app/main-page/main-page.component.scss
+++ b/akaflieg-ui/src/app/main-page/main-page.component.scss
@@ -66,7 +66,7 @@
   }
   .navbar-main.affix .navbar-brand {
     visibility: visible;
-    font-size: 2em;
+    font-size: 1.8em;
   }
   .navbar-main .navbar-nav > .active > a {
     @include border-radius(3px);
